--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -16,7 +16,7 @@ services:
     container_name: s3
     command: server --console-address ":9090" /data
     environment:
-      MINIO_ROOT_USER: user
+      MINIO_ROOT_USER: admin
       MINIO_ROOT_PASSWORD: password
     ports:
       - "9000:9000"
@@ -62,7 +62,7 @@ services:
       - DB_USER=admin
       - DB_PASSWORD=password
       - DB_SSL_MODE=disable
-      - AWS_ACCESS_KEY_ID=user
+      - AWS_ACCESS_KEY_ID=admin
       - AWS_SECRET_ACCESS_KEY=password
       - AWS_ENDPOINT=http://s3:9000
       - REDIS_HOST=redis
@@ -91,7 +91,7 @@ services:
       - DB_PASSWORD=password
       - DB_SSL_MODE=disable
       - JWT_SECRET_KEY=Zq4t7w!z%C*F-JaNcRfUjXn2r5u8x/A?
-      - AWS_ACCESS_KEY_ID=user
+      - AWS_ACCESS_KEY_ID=admin
       - AWS_SECRET_ACCESS_KEY=password
       - AWS_ENDPOINT=http://s3:9000
       - REDIS_HOST=redis
