--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -10,6 +10,7 @@ sql:
         emit_result_struct_pointers: true
         emit_interface: true
         emit_empty_slices: true
+        emit_prepared_queries: true
         overrides:
           - db_type: 'pg_catalog.varchar'
             go_type:
